--- a/App/Views/MainWindow.xaml
+++ b/App/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BankFlowAnalyzer.Views"
         xmlns:vm="clr-namespace:BankFlowAnalyzer.ViewModels"
         mc:Ignorable="d"
-        Title="银行流水分析系统 (MVP)" Height="720" Width="1200">
+        Title="银行流水分析系统" Height="720" Width="1200">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
